# ariticle_writer

./: mkdocs.yml  pyproject.toml
docs/: agents.md  crew.md  index.md  tasks.md
notebboks/: article_writing_agency.ipynb
