[project]
name = "crew-ai"
version = "0.1.0"
description = "Understand crew ai"
authors = [
    {name = "Akhil J P", email = "akhiljp5352@gmail.com"},
]
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.24",
    "mkdocstrings>=0.25.1",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "crewai>=0.11.2",
    "jupyter>=1.0.0",
    "crewai-tools>=0.0.1",
    "google-generativeai>=0.5.4",
    "setuptools>=70.0.0",
    "langchain-google-genai>=1.0.4",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.0.38",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
